		  History of changes to python-icat
		  =================================

* Version 0.6.0 (not yet released)

 + Add support for ICAT 4.4.0-20141010.100405-5: add InvestigationGroup.

 + Add new IDSClient API method getApiVersion() that is supposed to be
   introduced with the next upcoming version of IDS.  The method first
   tries to call getApiVersion() on the IDS server.  If this fails
   because the server does not support it yet, the server version is
   guessed from visible features in the API.

   IDSClient checks the API version on init.

 + Add new IDSClient API methods isReadOnly(), isTwoLevel(),
   getLink(), and getSize() introduced with IDS 1.2.0.

 + WARNING, incompatible change!
   The Client method putData() returns the new Datafile object created
   by IDS rather then only its id.

   If you depend on the old behavior in the client code, replace:

   dfid = client.putData(file, datafile)

   by

   df = client.putData(file, datafile)
   dfid = df.id

 + Change IDSClient API methods archive() and restore() to not to
   return anything.  While formally, this might be considered an
   incompatible change, these methods never returned anything
   meaningful in the past.

 + Some small fixes in icatdump and icatrestore.

 + setup.py raises an error with Python 2.6 if python2_6.patch has not
   been applied.

 + Add missing MANIFEST.in in the source distribution.

 + Remove the work around the Suds datetime value bug (setting the
   environment variable TZ to "UTC") from   init  .py.  Instead,
   document it along with other known issues in the README.

 + Minor fixes in the sorting of entity objects.

 + Add an optional argument args to Config.getconfig().  If set to a
   list of strings, it replaces sys.argv.  Mainly useful for testing.

 + Add comparison operators to class ListProxy.

* Version 0.5.1 (2014-07-07)

 + Add a module icat.eval that is intended to be run using the "-m"
   command line switch to Python.  It allows to evaluate Python