@@ -131,57 +131,58 @@ owngroup = client.createGroup(owngroupname, investigationowner)
 writegroup = client.createGroup(writegroupname, investigationwriter)
 readgroup = client.createGroup(readgroupname, investigationreader)
 
-# Setup InvestigationGroups (although this is not yet functional with
-# the current ICAT snapshot).
+# ------------------------------------------------------------
+# Setup InvestigationGroups or permissions
+# ------------------------------------------------------------
+
+# InvestigationGroup have been introduced with ICAT 4.4.  If
+# available, just create them.  Then we don't need to setup
+# permissions, as the static rules created in init-icat.py apply.  For
+# older versions of ICAT, we need to setup per investigation rules.
+
 if client.apiversion > '4.3.99':
+
     investigation.addInvestigationGroup(owngroup, role="owner")
     investigation.addInvestigationGroup(writegroup, role="writer")
     investigation.addInvestigationGroup(readgroup, role="reader")
 
-# ------------------------------------------------------------
-# Setup permissions
-# ------------------------------------------------------------
-
-# perm_own_crud: items, that the owners should get CRUD perms on.
-# perm_own_r: items, that the owners should get R perms on.
-if client.apiversion < '4.2.99':
-    perm_own_crud = [ "UserGroup <-> Group[name='%s']" % s for s in 
-                      [ writegroupname, readgroupname ] ]
 else:
-    perm_own_crud = [ "UserGroup <-> Grouping[name='%s']" % s for s in 
-                      [ writegroupname, readgroupname ] ]
+
+    # perm_own_crud: items, that the owners should get CRUD perms on.
+    # perm_own_r: items, that the owners should get R perms on.
+    if client.apiversion < '4.2.99':
+        perm_own_crud = [ "UserGroup <-> Group[name='%s']" % s for s in 
+                          [ writegroupname, readgroupname ] ]
+    else:
+        perm_own_crud = [ "UserGroup <-> Grouping[name='%s']" % s for s in 
+                          [ writegroupname, readgroupname ] ]
 
 
-investigationstr = "Investigation[name='%s']" % investigation.name
-# Items, that people in the writers group should get CRUD perms on.
-perm_crud = [ s % investigationstr for s in 
-              [ "Sample <-> %s",
-                "Dataset <-> %s",
-                "Datafile <-> Dataset <-> %s",
-                "InvestigationParameter <-> %s",
-                "SampleParameter <-> Sample <-> %s",
-                "DatasetParameter <-> Dataset <-> %s",
-                "DatafileParameter <-> Datafile <-> Dataset <-> %s",
-                "Shift <-> %s",
-                "Keyword <-> %s",
-                "Publication <-> %s", ] ]
-if client.apiversion > '4.2.99':
-    perm_crud.append("InvestigationInstrument <-> %s" % investigationstr)
+    investigationstr = "Investigation[name='%s']" % investigation.name
+    # Items, that people in the writers group should get CRUD perms on.
+    perm_crud = [ s % investigationstr for s in 
+                  [ "Sample <-> %s",
+                    "Dataset <-> %s",
+                    "Datafile <-> Dataset <-> %s",
+                    "InvestigationParameter <-> %s",
+                    "SampleParameter <-> Sample <-> %s",
+                    "DatasetParameter <-> Dataset <-> %s",
+                    "DatafileParameter <-> Datafile <-> Dataset <-> %s",
+                    "Shift <-> %s",
+                    "Keyword <-> %s",
+                    "Publication <-> %s", ] ]
+    if client.apiversion > '4.2.99':
+        perm_crud.append("InvestigationInstrument <-> %s" % investigationstr)
 
-# Items, that people in the writers group should get RU perms on.
-perm_ru = []
+    # Items, that people in the writers group should get R perms on.
+    perm_r = [ investigationstr, 
+               "InvestigationUser <-> %s" % investigationstr, ]
 
-# Items, that people in the writers group should get R perms on.
-perm_r = [ investigationstr, "InvestigationUser <-> %s" % investigationstr, ]
-if client.apiversion > '4.3.99':
-    perm_r.append("InvestigationGroup <-> %s" % investigationstr)
-
-# owners permissions
-client.createRules(owngroup, "CRUD", perm_own_crud)
-# writers permissions
-client.createRules(writegroup, "RU", perm_ru)
-client.createRules(writegroup, "CRUD", perm_crud)
-client.createRules(writegroup, "R", perm_r)
-# people in the readers group just get read access on the whole bunch
-client.createRules(readgroup, "R", perm_ru + perm_crud + perm_r)
+    # owners permissions
+    client.createRules(owngroup, "CRUD", perm_own_crud)
+    # writers permissions
+    client.createRules(writegroup, "CRUD", perm_crud)
+    client.createRules(writegroup, "R", perm_r)
+    # people in the readers group just get read access on the whole bunch
+    client.createRules(readgroup, "R", perm_crud + perm_r)
 
